<resources>
    <string name="app_name">ChatApp</string>
    <string name="login">Log In</string>
    <string name="uname">Username</string>
    <string name="pwd">Password</string>
    <string name="regmsg">Click here to register</string>

    <string name="reg">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>

    <string name="settings">Settings</string>
</resources>
